--- a/Auth4/Auth4.csproj
+++ b/Auth4/Auth4.csproj
@@ -2,27 +2,25 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <UserSecretsId>aspnet-Auth4-06A9D719-BD65-4873-AB69-A83B4B21D14B</UserSecretsId>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <AssemblyName>BrightPathDev</AssemblyName>
+    <RootNamespace>BrightPathDev</RootNamespace>
+    <Authors>Zakaria Hajlaoui , Iheb Chatti</Authors>
+    <RepositoryUrl>https://github.com/St-Creamer/dumb-shit</RepositoryUrl>
+    <PackageReleaseNotes>in progress boi</PackageReleaseNotes>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
 
   <ItemGroup>
     <Folder Include="wwwroot\Image\" />
-    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
